# FlowRT

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/flowrt-cli/: Cargo.toml
crates/flowrt-cli/src/: boundary_pub.rs  build_model.rs  cache.rs  frame_json.rs  introspection.rs  main.rs  project_manifest.rs  record.rs  replay.rs  tests.rs  toolchain.rs
crates/flowrt-cli/src/app_add/: mod.rs  names.rs  rsdl.rs  skeleton.rs  types.rs
crates/flowrt-cli/src/fault_matrix/: check.rs  expect.rs  mod.rs  model.rs  runner.rs
crates/flowrt-cli/src/introspection/: display.rs  live.rs  mod.rs  remote.rs
crates/flowrt-cli/src/tests/: build_runtime_tests.rs  command_tests.rs  echo_params_tests.rs  fault_matrix_tests.rs  record_tests.rs  selfdesc_status_hz_tests.rs  toolchain_tests.rs  workspace_tests.rs
crates/flowrt-cli/src/tests/echo_params_tests/: echo.rs  live_params.rs  mod.rs  pub_cmd.rs  remote_operation.rs  remote_params.rs  replay.rs
crates/flowrt-cli/src/tests/selfdesc_status_hz_tests/: frame_transport.rs  operation.rs
crates/flowrt-cli/src/tests/workspace_tests/: build_run.rs  bundle.rs  cache.rs  cargo_build.rs  cmake.rs  deploy.rs  external.rs  managed.rs  mod.rs  prepare.rs
crates/flowrt-cli/src/workflows/: args.rs  bundle_deploy.rs  doctor_toolchain.rs  external.rs  init.rs  managed.rs  mod.rs  prepare_build.rs  run_launch.rs  shared.rs
crates/flowrt-codegen/: Cargo.toml
crates/flowrt-codegen/src/: app_api.rs  build_files.rs  cpp_shell.rs  explain.rs  launch_manifest.rs  lib.rs  messages.rs  resource_names.rs  ros2_bridge.rs  runtime_plan.rs  selfdesc.rs  signature_summary.rs  supervisor.rs  tests.rs
crates/flowrt-codegen/src/cpp_shell/: app_constructor.rs  c_adapter_emit.rs  components.rs  helpers.rs  introspection_emit.rs  mod.rs  operation_emit.rs  params_emit.rs  run_emit.rs  service_emit.rs  step_emit.rs
crates/flowrt-codegen/src/rust_shell/: backend_emit.rs  introspection_emit.rs  lifecycle_emit.rs  mod.rs  operation_emit.rs  params_emit.rs  scheduler_emit.rs  service_emit.rs  step_emit.rs
crates/flowrt-codegen/src/tests/: app_api.rs  artifacts.rs  backend.rs  channels.rs  explain.rs  fault_injection.rs  fault_matrix.rs  golden.rs  introspection.rs  launch.rs  messages.rs  operation.rs  params.rs  ros2_bridge.rs  runtime_plan.rs  services.rs  standby_failover.rs  tasks.rs
crates/flowrt-codegen/tests/golden/bounded_channel_iox2_cpp/: input.rsdl
crates/flowrt-codegen/tests/golden/bounded_channel_iox2_rust/: input.rsdl
crates/flowrt-codegen/tests/golden/bounded_operation_iox2_cpp/: input.rsdl
crates/flowrt-codegen/tests/golden/bounded_operation_iox2_rust/: input.rsdl
crates/flowrt-codegen/tests/golden/bounded_service_iox2_cpp/: input.rsdl
crates/flowrt-codegen/tests/golden/bounded_service_iox2_rust/: input.rsdl
crates/flowrt-codegen/tests/golden/c_params_cpp/: input.rsdl
crates/flowrt-codegen/tests/golden/cross_process_feedback_cpp/: input.rsdl
crates/flowrt-codegen/tests/golden/cross_process_feedback_rust/: input.rsdl
crates/flowrt-codegen/tests/golden/fault_injection_degrade_recover_cpp/: inject.toml  input.rsdl
crates/flowrt-codegen/tests/golden/fault_injection_degrade_recover_rust/: input.rsdl
crates/flowrt-codegen/tests/golden/fault_injection_restart_cpp/: inject.toml  input.rsdl
crates/flowrt-codegen/tests/golden/fault_injection_restart_rust/: input.rsdl
crates/flowrt-codegen/tests/golden/feedback_loop_cpp/: input.rsdl
crates/flowrt-ir/: Cargo.toml
crates/flowrt-ir/src/: backend.rs  error.rs  fault_injection.rs  lib.rs  model.rs  normalize.rs  temporary_island.rs  type_expr.rs
crates/flowrt-ir/src/derived/: backends.rs  deployment.rs  mod.rs  resources.rs  tests.rs
crates/flowrt-ir/src/normalize/: assembly.rs  backends.rs  graphs.rs  ids.rs  mod.rs  modules.rs  operations.rs  package.rs  params.rs  profiles.rs  resolver.rs  services.rs  targets.rs
crates/flowrt-record/: Cargo.toml
crates/flowrt-record/src/: lib.rs
crates/flowrt-record/tests/: record_format.rs
crates/flowrt-validate/: Cargo.toml
crates/flowrt-validate/src/: capabilities.rs  components.rs  contract.rs  graphs.rs  lib.rs  names.rs  resources.rs  tests.rs  types.rs
crates/flowrt-validate/src/tests/: bridge_tests.rs  capability_tests.rs  component_tests.rs  contract_tests.rs  feedback_tests.rs  graph_tests.rs  message_tests.rs  name_tests.rs  redundancy_tests.rs  resource_tests.rs  sync_tests.rs
runtime/cpp/: CMakeLists.txt
runtime/cpp/cmake/: flowrt_runtimeConfig.cmake.in
runtime/cpp/include/flowrt/: abi.h  backend.hpp  backend_health.hpp  channels.hpp  core.hpp  executor.hpp  inproc_service.hpp  introspection.hpp  iox2.hpp  lifecycle.hpp  operation.hpp  replay.hpp  runtime.hpp  service.hpp  synchronizer.hpp  wire.hpp  zenoh.hpp
runtime/cpp/tests/: frame_descriptor_smoke.cpp  inproc_service_smoke.cpp  introspection_smoke.cpp  iox2_service_smoke.cpp  iox2_smoke.cpp  lifecycle_smoke.cpp  operation_smoke.cpp  replay_smoke.cpp  runtime_smoke.cpp  service_smoke.cpp  synchronizer_smoke.cpp  wire_smoke.cpp  zenoh_service_client.cpp  zenoh_service_server.cpp  zenoh_service_smoke.cpp  zenoh_smoke.cpp
runtime/rust/: Cargo.toml
runtime/rust/examples/: zenoh_service_client.rs  zenoh_service_server.rs
runtime/rust/src/: abi.rs  backend.rs  channel.rs  descriptor.rs  executor.rs  frame.rs  inproc.rs  introspection.rs  iox2.rs  lib.rs  lifecycle.rs  operation.rs  params_remote.rs  recorder.rs  replay.rs  service.rs  shutdown.rs  supervisor.rs  synchronizer.rs  time_driver.rs  tracing.rs  wire.rs  zenoh.rs
runtime/rust/src/introspection/: client.rs  diagnostics.rs  facts.rs  mod.rs  model.rs  params.rs  paths.rs  probe.rs  server.rs  state.rs  tests.rs
runtime/rust/src/supervisor/: command.rs  dependency.rs  global_tick.rs  launch_loop.rs  manifest.rs  mod.rs  readiness.rs  resource_placement.rs  resources.rs  tests.rs  time.rs  zenoh.rs
runtime/rust/tests/: abi.rs  frame_descriptor.rs  operation.rs  service_frame.rs  zenoh_service.rs
(+725 files in other folders)
