[workspace]
resolver = "3"
members = [
    "crates/flowrt-cli",
    "crates/flowrt-codegen",
    "crates/flowrt-conformance",
    "crates/flowrt-ir",
    "crates/flowrt-record",
    "crates/flowrt-rsdl",
    "crates/flowrt-selfdesc",
    "crates/flowrt-validate",
    "runtime/rust",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = { version = "0.8", features = ["preserve_order"] }
object = { version = "0.39.1", default-features = false, features = ["read_core", "elf", "macho", "pe"] }
mcap = { version = "0.24.0", default-features = false }
