[package]
name = "flowrt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "flowrt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
flowrt-codegen = { path = "../flowrt-codegen" }
flowrt-ir = { path = "../flowrt-ir" }
flowrt-rsdl = { path = "../flowrt-rsdl" }
flowrt-validate = { path = "../flowrt-validate" }

[dev-dependencies]
serde_json.workspace = true
