[package]
name = "flowrt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "flowrt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
flowrt-codegen = { path = "../flowrt-codegen" }
flowrt-ir = { path = "../flowrt-ir" }
flowrt-rsdl = { path = "../flowrt-rsdl" }
flowrt-validate = { path = "../flowrt-validate" }
flowrt = { path = "../../runtime/rust" }
libc.workspace = true
object.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
