[package]
name = "flowrt-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "flowrt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
flowrt-codegen = { path = "../flowrt-codegen" }
flowrt-conformance = { path = "../flowrt-conformance" }
flowrt-ir = { path = "../flowrt-ir" }
flowrt-record = { path = "../flowrt-record" }
flowrt-rsdl = { path = "../flowrt-rsdl" }
flowrt-selfdesc = { path = "../flowrt-selfdesc" }
flowrt-validate = { path = "../flowrt-validate" }
flowrt = { path = "../../runtime/rust", features = ["zenoh"] }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
zenoh = { version = "1.9", default-features = false, features = ["transport_tcp"] }

[dev-dependencies]

[lints]
workspace = true
