[package]
name = "flowrt-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowrt-conformance = { path = "../flowrt-conformance" }
flowrt-ir = { path = "../flowrt-ir" }
flowrt-selfdesc = { path = "../flowrt-selfdesc" }
flowrt-validate = { path = "../flowrt-validate" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
flowrt-rsdl = { path = "../flowrt-rsdl" }
