[package]
name = "flowrt-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
flowrt-rsdl = { path = "../flowrt-rsdl" }
serde.workspace = true
serde_ignored.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
