[package]
name = "flowrt"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[features]
default = []
iox2 = ["dep:iceoryx2"]
zenoh = ["dep:zenoh"]

[dependencies]
iceoryx2 = { version = "0.9", optional = true }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zenoh = { version = "1.9", default-features = false, features = ["transport_tcp"], optional = true }
