[package]
name = "flowrt"
version = "0.8.3"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[features]
default = []
iox2 = ["dep:iceoryx2"]
zenoh = ["dep:zenoh"]

[dependencies]
flowrt-record = { path = "../../crates/flowrt-record" }
iceoryx2 = { version = "0.9", optional = true }
libc = "0.2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zenoh = { version = "1.9", default-features = false, features = ["transport_tcp"], optional = true }

[[example]]
name = "zenoh_service_client"
required-features = ["zenoh"]

[[example]]
name = "zenoh_service_server"
required-features = ["zenoh"]
