[package]
name = "flowrt"
version = "0.23.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[features]
default = []
iox2 = ["dep:iceoryx2"]
zenoh = ["dep:zenoh"]

[dependencies]
flowrt-record = { path = "../../crates/flowrt-record" }
iceoryx2 = { version = "0.9", optional = true }
libc = "0.2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zenoh = { version = "1.9", default-features = false, features = ["transport_tcp"], optional = true }

[[example]]
name = "zenoh_service_client"
required-features = ["zenoh"]

[[example]]
name = "zenoh_service_server"
required-features = ["zenoh"]

# runtime 作为 deb 独立 crate 发布（安装到 /opt/flowrt 下，无 workspace 根），不能
# inherit workspace.lints——否则用户项目解析该 manifest 时报「failed to find a workspace
# root」。这里内联与 [workspace.lints.clippy] 一致的现代化门禁，使独立 crate 也能解析并保门禁。
[lints.clippy]
uninlined_format_args = "warn"
manual_string_new = "warn"
explicit_iter_loop = "warn"
redundant_else = "warn"
